# nccl-ha

./: .gitignore  CMakeLists.txt  readme.md
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  VALIDATION_PLAN.md  nccl-ha.md  run_nccl_test.md
src/: ha_net.c
